--- a/backend/app/static/styles/style.css
+++ b/backend/app/static/styles/style.css
@@ -11,12 +11,22 @@ table {
     counter-increment: tableCount;
 }
 
-footer {
-    clear: both;
-    position: relative;
-    height: 200px;
-    margin-top: -200px;
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
+
+.buttongreen {background-color: #4CAF50;} /* Green */
+.buttongray {background-color: #e7e7e7; color: black;} /* Gray */
+
 
 .header-img {
   width: 100%;
