button green when user is in move

--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -594,9 +594,9 @@
               // set button color
               var id = localStorage.getItem('id');
               if (id == waiting_user_id){
-                throwbutton.className  = 'button buttongreen'
+                throwbutton.className  = 'buttongreen'
               }else{
-                throwbutton.className  = 'button buttongray'
+                throwbutton.className  = 'buttongray'
               }
 
               // set user first First_Half
