rename static file

--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -216,7 +216,7 @@
     var dice2_v = document.getElementById('dice2_v');
     var dice3_v = document.getElementById('dice3_v');
 
-    var audio = new Audio("{{ url_for("static", filename = "würfeln.mp3")}}");
+    var audio = new Audio("{{ url_for("static", filename = "wuerfeln.mp3")}}");
     audio.play();
     var x = ''
     setTimeout(function(){ x="4 seconds" }, 3000);
