--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -7,14 +7,14 @@
     <main>
         <div class="header-img"></div>
     </main>
-    <div class="row col-md-offset-1">
-      <div class="col-md-4">
+    <div class="row">
+      <div class="col-md-11 col-md-offset-1">
         <h1>Welcome to Tele-Schocken</h1>
       </div>
     </div>
 
-    <div class="row col-md-offset-1" style="height:5px;">
-        <div class="col-md-5">
+    <div class="row col-md-offset-1">
+        <div class="col-md-6">
           <div class="row">
             <div class="col-md-9">
               <h2>Spiel erzeugen</h2>
@@ -33,33 +33,33 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-md-12">
                       <label for="UUID">Spiel ID</label>
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-12">
                       <input  type="text" id="UUID" value="">
                     </div>
                   </div>
                 </div>
                 <div class="col-md-4">
                   <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-12">
                       <label for="Name">Name</label>
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-12">
                       <input  type="text" id="Name" value="">
                     </div>
                   </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-4">
                   <div class="row" style="height:25px;">
                   </div>
                   <div class="row" >
-                    <div class="col-md-9">
+                    <div class="col-md-12">
                       <button onclick="joinGame()">Beitreten</button>
                     </div>
                   </div>
@@ -68,7 +68,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
           <div class="row">
             <div class="col-md-4">
               <h3>Erläuterung:</h3>
