--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -5,38 +5,38 @@
     <div class="header-img"></div>
 </main>
 
-<div class="row col-md-offset-1">
-  <div class="col-md-1">
+<div class="row ">
+  <div class="col-md-2 col-md-offset-1">
     <h2>Stapel</h2>
   </div>
-  <div class="col-md-8">
+  <div class="col-md-9">
     <h2 id="Message"></h2>
   </div>
 </div>
-<div class="row col-md-offset-1">
-  <div class="col-md-1">
+<div class="row ">
+  <div class="col-md-2 col-md-offset-1">
     <h3 id="StackChips_id">Chips: {{game.stack}}</h3>
   </div>
-  <div class="col-md-2">
+  <div class="col-md-3">
       <h3 id="StackFirst_id" class="fas fa-gem"> Erste Hälfte</h3>
   </div>
-  <div class="col-md-2">
+  <div class="col-md-3">
     <h3 id="throw_id">Anzahl würfe:</h3>
   </div>
-  <div class="col-md-2">
+  <div class="col-md-3">
       <h3 id="waiting_id">Warten auf: {{game.moveName(game.move_user_id)}}</h3>
       <p id="UUID" hidden>{{game.UUID}}</p>
       <p id="admin_id" hidden>{{game.admin_user_id}}</p>
   </div>
 </div>
 
-<div class="row col-md-offset-1">
-  <div class="col-md-4">
+<div class="row ">
+  <div class="col-md-11 col-md-offset-1">
     <h2 id="ownuser">Spielen User:</h2>
   </div>
 </div>
-<div class="row col-md-offset-1">
-  <div class="col-md-1">
+<div class="row ">
+  <div class="col-md-1 col-md-offset-1">
     <button id='startgame_id'onclick="dice()">Würfeln</button>
   </div>
   <div class="col-md-1">
@@ -45,7 +45,7 @@
   <div class="col-md-1">
     <button id='startgame_id' onclick="pullup()">Aufdecken</button>
   </div>
-  <div class="col-md-1">
+  <div class="col-md-2">
     <label for="pullup_cb">Aufdecken:</label>
     <input type="checkbox" id="pullup_cb" name="dice1" value="False" checked>
   </div>
@@ -94,12 +94,13 @@
   </div>
 </div>
 
-<div class="row col-md-offset-1">
-  <div class="col-md-4">
+<div class="row ">
+  <div class="col-md-11 col-md-offset-1">
     <h2>Spieler</h2>
   </div>
 </div>
-<div class="row col-md-9 col-md-offset-1" data-example-id="striped-table">
+<div class="row" data-example-id="striped-table">
+  <div class="col-md-10 col-md-offset-1">
     <table class="table table-striped table-hover" >
       <thead>
         <tr>
@@ -139,21 +140,23 @@
         {% endfor %}
         </tbody>
     </table>
+  </div>
+
 </div>
 
 <div id="admin_interface">
-  <div class="row col-md-offset-1">
-    <div class="col-md-4">
+  <div class="row ">
+    <div class="col-md-4 col-md-offset-1">
       <h2>Admin</h2>
     </div>
   </div>
-  <div class="row col-md-offset-1">
-    <div class="col-md-1">
+  <div class="row ">
+    <div class="col-md-1 col-md-offset-1">
       <label for="stack_count_id">Anzahl:</label>
       <input type="number" id="stack_count_id" name="stack_count_id"
-         min="0" max="13">
+         min="0" max="13" style='width:100%'>
     </div>
-    <div class="col-md-1">
+    <div class="col-md-2">
       <label for="stack_cb">Von Stapel:</label>
       <input type="checkbox" id="stack_cb" name="stack" value="False" checked>
     </div>
@@ -161,7 +164,7 @@
       <label for="schockaus_cb">Schockaus</label>
       <input type="checkbox" id="schockaus_cb" name="schockaus" value="False">
     </div>
-    <div class="col-md-1">
+    <div class="col-md-2">
       <label for="transfer_source">Von:</label>
       <select id="transfer_source" name="count">
         <option value=""></option>
