--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -13,10 +13,10 @@
       </div>
     </div>
 
-    <div class="row col-md-offset-1">
-        <div class="col-md-6">
+    <div class="row ">
+        <div class="col-md-5 col-md-offset-1">
           <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-12">
               <h2>Spiel erzeugen</h2>
               <label for="adminname">Name</label>
               <input  type="text" id="adminname" value="">
@@ -24,9 +24,9 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-11">
+            <div class="col-md-12">
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
                   <h2>Spiel beitreten</h2>
                 </div>
               </div>
