--- a/backend/app/static/styles/style.css
+++ b/backend/app/static/styles/style.css
@@ -24,6 +24,8 @@ table {
 .spin {
 }
 @-webkit-keyframes spin {
+  0% { -webkit-filter: blur(10px);}
+  100% { -webkit-filter: blur(0px);}
     from {
         transform:rotate(0deg);
     }
@@ -33,10 +35,76 @@ table {
 }
 .spin.animated {
     -webkit-animation-name: spin;
+    -webkit-font-smoothing: antialiased;
+
     -webkit-animation-duration: 3400ms;
     -webkit-animation-iteration-count: 1;
     -webkit-animation-timing-function: ease;
 }
+
+@keyframes messageanimation {
+  from {color: red;}
+  to {color: black;}
+}
+
+/* The element to apply the animation to */
+.message {
+  color: black;
+  animation-name: messageanimation;
+  animation-duration: 15s;
+}
+
+/* Container needed to position the button. Adjust the width as needed */
+.containercup {
+ position: relative;
+ width: 60%;
+}
+
+/* Make the image responsive */
+.containercup img {
+ width: 100%;
+ height: auto;
+}
+
+/* Style the button and place it in the middle of the container/image */
+.containercup .btn {
+ position: absolute;
+ top: 0%;
+ left: 0%;
+
+ background-color: #ffffff;
+ opacity: .4;
+ width: 100%;
+ height: 100%;
+ border: none;
+ border-radius: 5px;
+}
+/* Container needed to position the button. Adjust the width as needed */
+.containerturner {
+ position: relative;
+ width: 100%;
+}
+
+/* Make the image responsive */
+.containerturner img {
+ width: 100%;
+ height: auto;
+}
+
+/* Style the button and place it in the middle of the container/image */
+.containerturner .btn {
+ position: absolute;
+ top: 0%;
+ left: 0%;
+
+ background-color: #ffffff;
+ opacity: .4;
+ width: 100%;
+ height: 100%;
+ border: none;
+ border-radius: 5px;
+}
+
 
 
 
