--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -6,7 +6,7 @@
 </main>
 
 <div class="row col-md-offset-1 col-md-6" style="height:90px;">
-    <h1>Spiel kann vom Admin gestartet werde</h1>
+    <h1>Spiel kann vom Admin gestartet werden</h1>
 </div>
 <div class="row col-md-offset-1 col-md-6">
     <h3 id="admin"></h3>
