--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -77,11 +77,11 @@
           <div class="row">
             <div class="col-md-9">
               <ul>
-                <li>Der Spieler, der das Spiel erzeugt ist auch die Bank und muss alle Chipts verteilen</li>
+                <li>Der Spieler, der das Spiel erzeugt ist auch die Bank und muss alle Chips verteilen</li>
                 <li>Wenn ein Zug vor dem dritten Würfeln beendet werden soll, bitte "Ende" klicken</li>
                 <li>Zu jeden Zeitpunkt kann auf bzw zu gedeckt werden.</li>
                 <li>Rausgestellte Würfel sind aufgedeckt</li>
-                <li>Der Spieler der bei einer Runde bereits gewonnen hat (0 Chps), muss jedes Mal auf "Ende" klicken wenn er dran wäre (ermöglicht wieder Einwerfen)</li>
+                <li>Der Spieler der bei einer Runde bereits gewonnen hat (0 Chips), muss jedes Mal auf "Ende" klicken wenn er dran wäre (ermöglicht wieder Einwerfen)</li>
                 <li>Der Code ist frei verfügbar. Wenn euch das Spiel gefällt liked es auf Github. Wenn ihr Anregungen habt oder Fehler findet meldet dies auch via Github</li>
               </ul>
             </div>
